--- a/Frontend-masters-challenge/newbie/interactive-rating-component/styles.css
+++ b/Frontend-masters-challenge/newbie/interactive-rating-component/styles.css
@@ -19,9 +19,8 @@ body {
   background-color: hsl(213, 19%, 18%);
   position: absolute;
   width: 300px;
-  margin: 10px;
   height: 350px;
-  padding: 3%;
+  padding: 30px;
 }
 
 .choosen-box {
@@ -35,6 +34,9 @@ body {
 }
 .choosen-box p {
   color: hsl(25, 97%, 63%);
+}
+.img-box {
+  margin-bottom: 30px;
 }
 .submitted {
   text-align: center;
@@ -60,12 +62,25 @@ body {
   border-radius: 100%;
   background-color: hsl(213, 19%, 21%);
 }
+
+.round-box {
+  color: hsl(217, 12%, 63%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background-color: hsl(213, 19%, 21%);
+}
+
 .rating:hover {
   color: hsl(0, 0%, 100%);
   background-color: hsl(25, 97%, 53%);
 }
 
 .text-box h2 {
+  margin-top: 40px;
   color: hsl(0, 0%, 100%);
 }
 .text-box p {
@@ -74,13 +89,13 @@ body {
 button {
   background-color: hsl(25, 97%, 53%);
   width: 300px;
-  height: 40px;
+  height: 50px;
   color: hsl(0, 0%, 100%);
   border-radius: 1.5rem;
   font-family: "Overpass", sans-serif;
   font-weight: 900;
   letter-spacing: 3px;
-  margin: 4%;
+  margin-top: 10px;
   border-width: 0;
 }
 button:hover {
